--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,28 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+
+# Firebase (Hosting, CLI, emulators)
+.firebase/
+.firebase/**
+.firebase/*.cache
+.firebase/hosting.*.cache
+firebase-debug.log
+firebase-debug.*.log
+firebase-export/
+firestore_export/
+storage_export/
+
+# Environment files / secrets (do not commit)
+.env
+*.env
+*.secret.*
+serviceAccount*.json
+*.serviceAccountKey.json
+
+# Tooling / IDE caches
+.eslintcache
+.vscode/
+.idea/
+.parcel-cache/
+coverage/
