--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "canvas-confetti": "^1.9.3",
     "firebase": "^12.4.0",
+    "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^11.18.6",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
@@ -43,6 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^4.9.5"
   }
 }
